wip(): video player components

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "multi-stream-viewer",
   "version": "1.0.0",
   "description": "Multistream viewer",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
