--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.3.0",
@@ -51,8 +51,10 @@
     "popper.js": "^1.16.0",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "style-loader": "^0.19.0",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.2.0",
     "styles-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^0.6.2",
