--- a/package.json
+++ b/package.json
@@ -36,23 +36,28 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "@svgr/webpack": "^4.3.3",
     "axios": "^0.20.0",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.18.7",
     "popper.js": "^1.16.0",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "react-redux": "^7.2.1",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "style-loader": "^0.19.0",
     "styled-components": "^5.2.0",
@@ -73,7 +78,8 @@
     "dev:start": "concurrently \"npm run dev:react\" \"npm run dev:server\"",
     "dev:server": "nodemon app.js --exec babel-node",
     "dev:react": "webpack --watch --config ./webpack.dev.js --inline ",
-    "dev:webpack-server": "webpack-dev-server --config ./webpack.dev.js --inline "
+    "dev:webpack-server": "webpack-dev-server --config ./webpack.dev.js --inline",
+    "test" : "jest"
   },
   "keywords": [
     "stream",
