--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Multistream viewer",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.18.3",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.3",
@@ -12,9 +13,7 @@
     "express": "^4.16.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^6.1.0",
-    "axios": "^0.20.0",
-    "react-router-dom": "^4.2.2"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -44,6 +43,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "file-loader": "^4.2.0",
@@ -56,6 +56,7 @@
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "style-loader": "^0.19.0",
